# letta-client-bot

./: .dockerignore  .env.example  .gitignore  .sops.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTION.md  Makefile  README.md  flake.nix  pyproject.toml
.claude/rules/: changelog.md  database.md  devscripts.md
.github/workflows/: deploy.yml
dbschema/: default.gel  extensions.gel
dbschema/migrations/: 00001-m12jkxj.edgeql  00001-m1kesb7.edgeql  00002-m1dlgal.edgeql
deploy/: Dockerfile  botfather_commands.txt  commands.json  docker-compose.yaml  gel.Dockerfile  gen-host-keys.sh  railway.toml
deploy/nix/: default.nix
development_scripts/: PAGINATION_FIXES.md  PAGINATION_GUIDE.md  api_direct_check.py  pause_zeplo_schedules.py  run_tool.py  send_scheduled_notification.py  test_message_splitter.py  test_pagination_comprehensive.py
devscripts/: __init__.py  bootstrap.py  delete_agents.py  deny_tool_call.py  folders.py  list_identities.py  list_users.py  merge_memory.py  migrate_identities_to_tags.py  move_agent.py  run_tool.py  tag_agents_with_creator.py  tag_agents_with_owner.py  test_block_metadata.py  test_check_pending.py  test_client_tool_image.py  test_folder_workflow.py  test_native_scheduling.py  test_upload_limits.py
letta_bot/: __init__.py  agent.py  auth.py  broadcast.py  client.py  commands.py  config.py  documents.py  errors.py  filters.py  images.py  info.py  letta_api.py  letta_sdk_extensions.py  main.py  message_splitter.py  middlewares.py  notification.py  response_handler.py  response_parser.py  tools.py  transcription.py  utils.py
letta_bot/_archived/: tools_notify_management.py
letta_bot/client_tools/: __init__.py  generate_image.py  registry.py
letta_bot/custom_tools/: client_tool_registry.py  delete_scheduled_message.py  discover_accounts.py  discover_topics.py  fetch_x_posts.py  generate_image.py  get_account_timeline.py  get_users_info.py  get_x_account_posts.py  list_scheduled_messages.py  notify_via_telegram.py  schedule_message.py  (+2 more)
md_tg/: README.md  __init__.py  config.py  converter.py  renderer.py  utils.py
notes/: README.md  about.md  changelog.md  contact.md  help.md  privacy.md  welcome.md
tests/: test_chunk_texts.py  test_md_tg_converter.py  test_md_tg_renderer.py  test_md_tg_utils.py  test_response_handler.py  test_split_markdown_v2.py
(+76 files in other folders)
