[project]
name = "letta-client-bot"
version = "1.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "aiogram>=3.22.0",
  "gel>=3.1.0",
  "letta-client>=1.6.5",
  "mistune>=3.1.4",
  "openai>=2.8.1",
  "pydantic-settings>=2.11.0",
]

[dependency-groups]
dev = ["ruff>=0.8.0", "mypy>=1.18.0", "pytest>=9.0.0"]

[tool.ruff]
line-length = 92
target-version = "py313"
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "devscripts/",
  "letta_bot/queries/*_async_edgeql.py",
  "letta_bot/custom_tools/",
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "ANN", # flake8-annotations
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]   # Allow unused imports in __init__.py
"tests/*" = ["ANN"]        # Don't require type annotations in tests
"devscripts/*" = ["ANN"]   # Don't require type annotations in devscripts

[tool.ruff.lint.isort]
known-first-party = ["letta_client_bot", "md_tg"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
exclude = [
  "letta-telegram-reference/",
  "letta_bot/queries/.*_async_edgeql\\.py$",
  "devscripts/",
  "letta_bot/custom_tools/",
  "tests/",
]
plugins = ['pydantic.mypy']

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disable_error_code = ["operator", "arg-type", "var-annotated"]

[[tool.mypy.overrides]]
module = ["letta_client.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "letta_bot.queries.*"
follow_imports = "skip"
disallow_untyped_defs = false
